src/epub/css/local.css
@charset "utf-8";
@namespace epub "http://www.idpf.org/2007/ops";

section[epub|type~="dedication"]{
	text-align: center;
}

section[epub|type~="dedication"] > *{
	display: inline-block;
	font-variant: small-caps;
	margin: auto;
	margin-top: 3em;
	max-width: 80%;
}

@supports(display: flex){
	section[epub|type~="dedication"]{
		align-items: center;
		box-sizing: border-box;
		display: flex;
		flex-direction: column;
		justify-content: center;
		min-height: calc(98vh - 3em);
		padding-top: 3em;
	}

	section[epub|type~="dedication"] > *{
		margin: 0;
	}
}

q{
	font-style: italic;
}

[epub|type~="z3998:hymn"] p,
[epub|type~="z3998:song"] p,
[epub|type~="z3998:verse"] p{
	text-align: initial;
	text-indent: 0;
}

[epub|type~="z3998:hymn"] p > span,
[epub|type~="z3998:song"] p > span,
[epub|type~="z3998:verse"] p > span{
	display: block;
	padding-left: 1em;
	text-indent: -1em;
}

[epub|type~="z3998:hymn"] p > span + br,
[epub|type~="z3998:song"] p > span + br,
[epub|type~="z3998:verse"] p > span + br{
	display: none;
}

[epub|type~="z3998:letter"] header{
	text-align: right;
}

footer{
	margin-top: 1em;
	text-align: right;
}

[epub|type~="z3998:letter"] header + p{
	text-indent: 0;
}

[epub|type~="z3998:signature"]{
	font-variant: small-caps;
}

[epub|type~="z3998:postscript"]{
	margin-top: 1em;
	text-align: initial;
	text-indent: 0;
}

